force-app/main/default/objects/ProdWeeksH__c/ProdWeeksH__c.object-meta.xml
<CustomObject>
    <label>Production Weeks</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Production Weeks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>