force-app/main/default/objects/ProdWeeksH__c/fields/DateTo__c.field-meta.xml
<CustomField>
    <fullName>DateTo__c</fullName>
    <label>Date To</label>
    <type>Date</type>
</CustomField>