force-app/main/default/objects/ProdWeeksH__c/fields/ItemId__c.field-meta.xml
<CustomField>
    <fullName>ItemId__c</fullName>
    <label>Item Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>