force-app/main/default/objects/ProdWeeksH__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>ProdWeeksH__c</referenceTo>
    <relationshipLabel>Production Weeks</relationshipLabel>
    <relationshipName>Production_Weeks</relationshipName>
    <type>Lookup</type>
</CustomField>