force-app/main/default/objects/ProdWeeksH__c/fields/WeekNum__c.field-meta.xml
<CustomField>
    <fullName>WeekNum__c</fullName>
    <label>Week Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>